--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'java'
+    id 'idea'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
